--- a/hotel.html
+++ b/hotel.html
@@ -1,9 +1,9 @@
 <link rel="icon" href="435.jpg">
 <h1>
-435
-12/19 Fri/Pá - Rodizio (No Reservation)
-12/21 Sun/Ne - Zai
-12/22 Mon/Po - Zai
-12/23 Tue/Út - Zai
-12/24 Wed/St - Zai
-12/25 Thu/Čt - Zai
+435<br>
+12/19 Fri/Pá - Rodizio (No Reservation)<br>
+12/21 Sun/Ne - Zai<br>
+12/22 Mon/Po - Zai<br>
+12/23 Tue/Út - Zai<br>
+12/24 Wed/St - Zai<br>
+12/25 Thu/Čt - Zai<br>
